fixed issue with loading spinner on mobile

--- a/src/atomic/atoms/loading/Loading.style.scss
+++ b/src/atomic/atoms/loading/Loading.style.scss
@@ -7,6 +7,7 @@
 	justify-content: center;
 	align-items: center;
 	width: 100vw;
+	height: 80vh;
 }
 
 .lds-roller {
